# ManagerStore

./: .replit  app.py  auth.py  extrato.csv  pyproject.toml  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--DOCTYPE-html-html-lang-pt-br-head-meta-charset-UTF-8-meta-http-equiv--1742507227459.txt  Pasted-Minified-React-error-231-visit-https-reactjs-org-docs-error-decoder-html-invariant-231-args-on-1742506044443.txt  Pasted-Minified-React-error-231-visit-https-reactjs-org-docs-error-decoder-html-invariant-231-args-on-1742507051138.txt  Pasted-Minified-React-error-231-visit-https-reactjs-org-docs-error-decoder-html-invariant-231-args-on-1742509058606.txt  Pasted-Missing-Submit-Button-This-form-has-no-submit-button-which-means-that-user-interactions-will-nev-1742321304961.txt  Pasted-streamlit-runtime-media-file-storage-MediaFileStorageError-Error-opening-logo-png-Traceback-Fi-1742258474915.txt
data/: financeiro.csv  produtos.csv  usuarios.csv
pages/: 1_Produtos.py  2_Financeiro.py  3_Relatorios.py  4_Assistente_IA.py  5_Configuracoes.py  6_Loja.py  7_Carrinho.py
utils/: __init__.py  ai_assistant.py
