[project]
name = "loja-roupas-gestao"
version = "0.1.0"
description = "Sistema de gestão para loja de roupas e calçados"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.2",
]
